<resources>
    <string name="app_name">CodeHub</string>
    <string name="app_statement">一起来做个app吧！</string>
    <string name="wan_android">WanAndroid</string>
    <string name="readhub">ReadHub</string>
    <string name="diycode">Diycode</string>
    <string name="github_trending">Github Trending</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_system">体系</string>
    <string name="home_nav_wechat">公众号</string>
    <string name="home_nav_project">项目</string>
    <string name="home_nav_user">我的</string>
    <string name="home_hotkey">热词</string>
    <string name="home_website">常用网站</string>
    <string name="home_search">搜索</string>
    <string name="main_topic">热门话题</string>
    <string name="main_tech">科技动态</string>
    <string name="main_dev">开发者资讯</string>
    <string name="main_block">区块链</string>
    <string name="http_error">网络君乘404航班去追寻诗和远方了</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_file_permission">没有权限访问文件，请手动授予权限</string>
    <string name="grant_file_permission">请先授予文件读写权限</string>
    <string name="click_skip">跳过</string>
    <string name="click_enter">进入主界面</string>
    <string name="choose_email">选择邮件客户端</string>
    <string name="input_key">请输入关键字</string>
    <string name="home_exit">再按一次退出</string>
    <string name="article_title">标题</string>
    <string name="article_author">作者</string>
    <string name="article_system">体系</string>
    <string name="article_date">日期</string>
    <string name="article_top">置顶</string>
    <string name="article_new">新</string>
    <string name="login_text">登录</string>
    <string name="click_login">点击登录</string>
    <string name="login_username_input_hint">请输入用户名</string>
    <string name="login_password_input_hint">请输入密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_username_password_null">用户名或密码不能为空</string>
    <string name="login_auto_success">自动登录成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="logout_text">退出登录</string>
    <string name="login_please">请先登录</string>
    <string name="register_text">注册</string>
    <string name="register_username_input_hint">请输入用户名</string>
    <string name="register_password_input_hint">请输入密码</string>
    <string name="register_confirm_password_input_hint">请确认密码</string>
    <string name="confirm_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="tag_text">标签</string>
    <string name="all_tag">全部标签</string>
    <string name="followed_tag">已关注标签</string>
    <string name="recommend_tag">推荐标签</string>
    <string name="follow"> + 关 注 </string>
    <string name="followed"> 已 关 注 </string>
    <string name="tag_1">基础知识</string>
    <string name="tag_1_detail">开发环境 基础知识 四大组件 常用控件 用户交互</string>
    <string name="tag_2">网络请求</string>
    <string name="tag_2_detail">网络访问 图片加载</string>
    <string name="tag_3">数据存储</string>
    <string name="tag_3_detail">数据存储</string>
    <string name="tag_4">自定义View</string>
    <string name="tag_4_detail">动画效果 自定义控件</string>
    <string name="tag_5">硬件相关</string>
    <string name="tag_5_detail">硬件模块 JNI 常用SDK framework 多媒体技术 TV相关</string>
    <string name="tag_6">项目必备</string>
    <string name="tag_6_detail">项目必备 干货资源 完整开源项目 开源项目源码解析 开放API</string>
    <string name="tag_7">高新技术</string>
    <string name="tag_7_detail">高新技术 延伸技术 Jetpack</string>
    <string name="tag_8">学习资源</string>
    <string name="tag_8_detail">推荐网站 原创文章 速查知识表 公众号 问答 视频 内推</string>
    <string name="tag_9">Java进阶</string>
    <string name="tag_9_detail">Java深入 Kotlin 注解&amp;反射&amp;AOP 跨平台 项目管理</string>
    <string name="tag_10">热门专题</string>
    <string name="tag_10_detail">项目架构 反编译 设计模式 插件化 模块化 组件化 热修复 性能优化 Xposed ANR</string>
    <string name="coin_text">积分</string>
    <string name="coin_rank">积分排行榜</string>
    <string name="coin_week">本期积分值</string>
    <string name="collect_text">收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="uncollect_success">取消收藏成功</string>
    <string name="uncollect_failed">取消收藏失败</string>
    <string name="collection">我的收藏</string>
    <string name="about_text">关于</string>
    <string name="about_author">开发者</string>
    <string name="about_wan_android">玩Android网站</string>
    <string name="about_open_source">开源框架</string>
    <string name="about_open_source_name">开源框架名称</string>
    <string name="about_open_source_author">square</string>
    <string name="about_open_source_detail">A memory leak detection library for Android and Java.</string>
    <string name="about_github">Github</string>
    <string name="about_weibo">微博</string>
    <string name="about_thanks">致谢</string>
    <string name="about_support">支持</string>
    <string name="wan_android_address">https://www.wanandroid.com</string>
    <string name="github_address">https://github.com/HurleyJames</string>
    <string name="weibo_address">https://weibo.com/u/5628559861</string>
    <string name="email_address">1401682479@qq.com</string>
    <string name="more_refresh">刷新</string>
    <string name="more_share">分享</string>
    <string name="more_copy_links">复制链接</string>
    <string name="more_copy_links_success">链接已复制</string>
    <string name="more_open_by_browser">用浏览器打开</string>
    <string name="license_ButterKnife">ButterKnife</string>
    <string name="license_dagger">dagger</string>
    <string name="license_OkHttp">OkHttp</string>
    <string name="license_Retrofit">Retrofit</string>
    <string name="license_RxJava">RxJava</string>
    <string name="license_RxAndroid">RxAndroid</string>
    <string name="license_RxBinding">RxBinding</string>
    <string name="license_AgentWeb">AgentWeb</string>
    <string name="license_ARouter">ARouter</string>
    <string name="license_Glide">Glide</string>
    <string name="license_BaseRecyclerViewAdapterHelper">BaseRecyclerViewAdapterHelper</string>
    <string name="license_Fragmentation">Fragmentation</string>
    <string name="license_FlowLayout">FlowLayout</string>
    <string name="license_Banner">Banner</string>
    <string name="license_OXChart">OXChart</string>
    <string name="license_MaterialAbout">MaterialAbout</string>
    <string name="license_ImmersionBar">ImmersionBar</string>
    <string name="license_XXPermissions">XXPermissions</string>
    <string name="license_AndroidUtilCode">AndroidUtilCode</string>
    <string name="author_ButterKnife">JakeWharton</string>
    <string name="author_dagger">square</string>
    <string name="author_OkHttp">square</string>
    <string name="author_Retrofit">square</string>
    <string name="author_RxJava">ReactiveX</string>
    <string name="author_RxAndroid">ReactiveX</string>
    <string name="author_RxBinding">JakeWharton</string>
    <string name="author_AgentWeb">Justson</string>
    <string name="author_ARouter">alibaba</string>
    <string name="author_Glide">bumptech</string>
    <string name="author_BaseRecyclerViewAdapterHelperr">CymChad</string>
    <string name="author_Fragmentation">YoKeyword</string>
    <string name="author_FlowLayout">hongyangAndroid</string>
    <string name="author_Banner">youth5201314</string>
    <string name="author_OXChart">openXu</string>
    <string name="author_MaterialAbout">jrvansuita</string>
    <string name="author_ImmersionBar">gyf-dev</string>
    <string name="author_XXPermissions">getActivity</string>
    <string name="author_AndroidUtilCode">Blankj</string>
    <string name="detail_ButterKnife">Bind Android views and callbacks to fields and methods.</string>
    <string name="detail_dagger">A fast dependency injector for Android and Java.</string>
    <string name="detail_OkHttp">An HTTP+HTTP/2 client for Android and Java applications.</string>
    <string name="detail_Retrofit">Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="detail_RxJava">RxJava – Reactive Extensions for the JVM – a library for composing asynchronous and event-based programs using observable sequences for the Java VM.</string>
    <string name="detail_RxAndroid">RxJava bindings for Android</string>
    <string name="detail_RxBinding">RxJava binding APIs for Android\'s UI widgets.</string>
    <string name="detail_AgentWeb">AgentWeb is a powerful library based on Android WebView.</string>
    <string name="detail_ARouter">💪 A framework for assisting in the renovation of Android componentization (帮助 Android App 进行组件化改造的路由框架)</string>
    <string name="detail_Glide">An image loading and caching library for Android focused on smooth scrolling</string>
    <string name="detail_BaseRecyclerViewAdapterHelper">BRVAH:Powerful and flexible RecyclerAdapter</string>
    <string name="detail_Fragmentation">A powerful library that manage Fragment for Android!</string>
    <string name="detail_FlowLayout">Android流式布局，支持单选、多选等，适合用于产品标签等。</string>
    <string name="detail_Banner">Android广告图片轮播控件，支持无限循环和多种主题，可以灵活设置轮播样式、动画、轮播和切换时间、位置、图片加载框架等！</string>
    <string name="detail_OXChart">各种自定义图表库，使用简单，支持扩展</string>
    <string name="detail_MaterialAbout">It\'s a material-design about screen to use on your Android apps. A developer profile and application information easy to integrate. 🔖</string>
    <string name="detail_ImmersionBar">android 4.4以上沉浸式状态栏和沉浸式导航栏管理，包括状态栏字体颜色，适用于Activity、Fragment、DialogFragment、Dialog，并且适配刘海屏，适配软键盘弹出等问题，一句代码轻松实现，以及对bar的其他设置，详见README</string>
    <string name="detail_XXPermissions">Android 6.0 permissions adaptation framework</string>
    <string name="detail_AndroidUtilCode">🔥 Android developers should collect the following utils(updating).</string>
    <string name="setting_text">设置</string>
    <string name="setting_normal_text">基本设置</string>
    <string name="setting_other_text">其它设置</string>
    <string name="setting_auto_cache">自动缓存</string>
    <string name="setting_no_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_theme_color">主题颜色</string>
    <string name="setting_language">多语言</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_clear_cache_success">清除缓存成功</string>
    <string name="setting_cache_num">0KB</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="support_text">支持</string>
    <string name="analysis_text">分析</string>
    <string name="analysis_week">一周内</string>
    <string name="analysis_month">一月内</string>
    <string name="analysis_year">一年内</string>
    <string name="recommend_tips">热门推荐</string>
    <string name="recommend_end">没有多余的文章可以推荐了</string>
    <string name="dev_environment">开发环境</string>
    <string name="basic_knowledge">基础知识</string>
    <string name="android_components">四大组件</string>
    <string name="common_ctrl">常用控件</string>
    <string name="UI">用户交互</string>
    <string name="network_access">网络访问</string>
    <string name="image_loading">图片加载</string>
    <string name="data_storage">数据存储</string>
    <string name="animation_effect">动画效果</string>
    <string name="customize_ctrl">自定义控件</string>
    <string name="media_tech">多媒体技术</string>
    <string name="hardware_module">硬件模块</string>
    <string name="JNI">JNI</string>
    <string name="common_SDK">常用SDK</string>
    <string name="framework">framework</string>
    <string name="Kotlin">Kotlin</string>
    <string name="advanced_Java">Java深入</string>
    <string name="cross_platform">跨平台</string>
    <string name="project_manage">项目管理</string>
    <string name="Jetpack">Jetpack</string>
    <string name="language_auto">跟随系统</string>
    <string name="language_simplified">简体中文</string>
    <string name="language_traditional">繁體中文</string>
    <string name="language_english">English</string>
</resources>