<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_wan_android"
        android:icon="@mipmap/ic_wan_android"
        android:title="@string/wan_android"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/home_readhub"
        android:icon="@mipmap/ic_readhub"
        android:title="@string/readhub"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/home_diycode"
        android:icon="@mipmap/ic_diycode"
        android:title="@string/diycode"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/home_github_trending"
        android:icon="@mipmap/github"
        android:title="@string/github_trending"
        app:showAsAction="ifRoom"/>

</menu>