<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/white90"
        android:paddingStart="@dimen/dp8"
        android:drawableStart="@mipmap/ic_refresh"
        android:drawablePadding="@dimen/dp8"
        android:text="@string/more_refresh"
        android:textColor="@color/text"
        android:textSize="@dimen/sp16"/>
    <Button
        android:id="@+id/btn_share"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/white90"
        android:paddingStart="@dimen/dp8"
        android:drawableStart="@mipmap/ic_share"
        android:drawablePadding="@dimen/dp8"
        android:text="@string/more_share"
        android:textColor="@color/text"
        android:textSize="@dimen/sp16"/>
    <Button
        android:id="@+id/btn_copy_links"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/white90"
        android:paddingStart="@dimen/dp8"
        android:drawableStart="@mipmap/ic_copy"
        android:drawablePadding="@dimen/dp8"
        android:text="@string/more_copy_links"
        android:textColor="@color/text"
        android:textSize="@dimen/sp16"/>
    <Button
        android:id="@+id/btn_open_by_browser"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/white90"
        android:paddingStart="@dimen/dp8"
        android:drawableStart="@mipmap/ic_browser"
        android:drawablePadding="@dimen/dp8"
        android:text="@string/more_open_by_browser"
        android:textColor="@color/text"
        android:textSize="@dimen/sp16"/>
    <Button
        android:id="@+id/btn_clear_cache"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/white90"
        android:paddingStart="@dimen/dp8"
        android:drawableStart="@mipmap/ic_clear_cache"
        android:drawablePadding="@dimen/dp8"
        android:text="@string/setting_clear_cache"
        android:textColor="@color/text"
        android:textSize="@dimen/sp16"/>
</LinearLayout>