<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_open_source_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp12"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_open_source_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_open_source_name"
            android:textColor="@color/text"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_open_source_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_open_source_author" />
    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="@dimen/dp12"
        android:layout_marginEnd="@dimen/dp12" />

    <TextView
        android:id="@+id/tv_open_source_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp12"
        android:text="@string/about_open_source_detail"/>
</LinearLayout>