<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp150"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_article_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_author"
                android:textColor="@color/black50"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_article_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_date"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/article_title"
            android:textColor="@color/text"
            android:textSize="@dimen/sp18" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_article_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/article_system"
                android:textColor="@color/black50"/>

            <ImageView
                android:id="@+id/iv_article_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_collect"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>