<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_open_source_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp12">

            <TextView
                android:id="@+id/tv_open_source_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_open_source_name"
                android:textColor="@color/text"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_open_source_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_open_source_author" />
        </LinearLayout>

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginStart="@dimen/dp12"
            android:layout_marginEnd="@dimen/dp12" />

        <TextView
            android:id="@+id/tv_open_source_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/dp12"
            android:text="@string/about_open_source_detail" />
    </LinearLayout>

</android.support.v7.widget.CardView>
